--- a/src/components/cart/CartItem.css
+++ b/src/components/cart/CartItem.css
@@ -5,7 +5,6 @@
 	overflow: hidden;
 	margin: 2em ;
 	height: 150px;
-    
 	width: 600px;
 
 }
@@ -25,10 +24,13 @@
 
 }
 
-.product-details-cart{	font-family: 'Bebas Neue', cursive;
+.product-details-cart{	
+    font-family: 'Bebas Neue', cursive;
 	display: inline-block;
 	position: relative;
 	font-size: 15px;
 	color: #344055;
-	margin: 0;
+	margin: 1px;
+    margin-top: 10px;
+
 	}
