--- a/src/components/cart/DetailsCart.css
+++ b/src/components/cart/DetailsCart.css
@@ -47,13 +47,16 @@ input{
     display: block;
     box-sizing: border-box;
     padding: 10px 15px;
-    border-radius: 60px;
+    border-radius:20px;
     font-weight: 100;
     letter-spacing: 0.01em;
     position: relative;
     /* z-index: 1; */
-    margin-left:4px;
+    margin-left:40px;
+    margin-right:40px;
+
     margin-top: 10px;
+
 
 }
 
@@ -67,3 +70,16 @@ padding: 10px 0;
 }
 
 
+h1{    
+    font-family: 'Bebas Neue', cursive;
+    color: #344055;
+
+
+
+}
+
+
+btn{
+    position: relative;
+
+}
