--- a/src/components/cart/CartItem.css
+++ b/src/components/cart/CartItem.css
@@ -24,7 +24,7 @@
 
 }
 
-.product-details-cart{	
+.item_name{	
     font-family: 'Bebas Neue', cursive;
 	display: inline-block;
 	position: relative;
@@ -32,5 +32,14 @@
 	color: #344055;
 	margin: 1px;
     margin-top: 10px;
+    margin-left: 20px;
+
 
 	}
+    
+
+    .quantity {
+        float: right;
+        margin-right: 5px;
+
+    }
